@@ -1,7 +1,27 @@
-##parameters=dirname, id, REQUEST=None
+##parameters=dirname=None, id=None, ids=[], REQUEST=None
+#
+# This script can be both called with request parameters or with form parameters
+
+from zLOG import LOG, DEBUG
+
+logKey = 'cpsdirectory_entry_delete'
+
+if REQUEST.form.has_key('dirname'):
+    dirname = REQUEST.form.get('dirname')
+    #LOG(logKey, DEBUG, "dirname = %s" % dirname)
+
+if REQUEST.form.get('ids'):
+    ids = REQUEST.form.get('ids')
+    #LOG(logKey, DEBUG, "ids = %s" % str(ids))
 
 dir = context.portal_directories[dirname]
-dir.deleteEntry(id)
+
+if id:
+    dir.deleteEntry(id)
+
+if ids:
+    for id in ids:
+        dir.deleteEntry(id)
 
 if REQUEST is not None:
     portal_url = context.portal_url()
